syntax = "proto3";

package order;

option go_package = "./orderservice";



message Order {
  int64 id = 1;
  double totalPrice = 2;
  string created_at = 3;
  repeated OrderProduct products = 4;

  message OrderProduct {
    int64 id = 1;
    string name = 2;
    double price = 3;
    uint32 quantity =4;
  }
}

message GetOrderRequest {
  int64 id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message CreateOrderRequest {
  repeated OrderProduct products = 1;
  double totalPrice = 2;
  message OrderProduct {
    int64 productId = 1;
    string name = 2;
    double price = 3;
    uint32 quantity = 4;
  }
}

message CreateOrderResponse {
  Order order = 1;
}

service OrderService {
  rpc GetOrder (GetOrderRequest) returns (GetOrderResponse) {}
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse) {}
}
